--- a/info.yaml
+++ b/info.yaml
@@ -16,14 +16,14 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "input a"
+  ui[1]: "input b"
+  ui[2]: "input c"
+  ui[3]: "input d"
+  ui[4]: "input e"
+  ui[5]: "input f"
+  ui[6]: "input g"
+  ui[7]: "input h"
 
   # Outputs
   uo[0]: ""
